# scrim-matchmaker

./: Cargo.toml
scrim-matchmaker/: Cargo.toml
scrim-matchmaker/migrations/: 1_initial.sql  2_team_name.sql  3_cancel_scrim.sql
scrim-matchmaker/src/: cancel.rs  db.rs  lfs.rs  main.rs  scrims.rs  timezone.rs
